[tool.poetry]
name = "iSelectBot"
version = "0.1.0"
description = ""
authors = ["Mark Fomin <mark@difhel.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.0"
pymongo = "^4.6.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
